# local-password-manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  crypto.rs  db.rs  main.rs  models.rs
